# openvino.genai

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .test_pr_creation  CMakeLists.txt  COPILOT_FEEDBACK_FIXES.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Jenkinsfile  PR_DESCRIPTION.md  README.md  README_Module_GenAI.md  SUPPORTED_MODELS.md  WHISPER_C_API_IMPLEMENTATION.md  bandit.yml  benchmark_cb_3cases.sh  cmake_output.txt  design.md  image2image.py  limit_checker.py  ltx-video.py  miniCPM-V-2_6.py  mypy.ini  openvino_genai-2024.5.0.0-cp311-cp311-linux_x86_64.whl  openvino_telemetry-2024.1.0-py3-none-any.whl  ov.fp16.config  ov.i8.by_channel.config  ov.i8.by_token.config  pr1_check.py  pr1_check.sh  pyproject.toml  readme.md  real_models_report_all_models.html  repro.py  reproducer.py  requirements-build.txt  (+6 more)
OV_SD_CPP/: CMakeLists.txt  README.md
OV_SD_CPP/scripts/: build_dependencies.sh
OV_SD_CPP/src/: stable_diffusion.hpp  utils.hpp
image_generation/common/detectors/: .gitignore  CMakeLists.txt  README.md  detectors_bridge.cpp  detectors_test.cpp
image_generation/common/diffusers/: CMakeLists.txt  README.md
image_generation/common/imwrite/: CMakeLists.txt  README.md
image_generation/lcm_dreamshaper_v7/cpp/: CMakeLists.txt  README.md  requirements.txt  set_up_and_run.sh
image_generation/stable_diffusion_1_5/cpp/: .gitignore  CMakeLists.txt  README.md  requirements.txt  set_up_and_run.sh
llm/: CMakeLists.txt  README.md  convert_tokenizers.py  llm.cpp
llm/chatglm_cpp/: CMakeLists.txt  README.md  chatglm.cpp
llm/cpp/: CMakeLists.txt  README.md  convert_tokenizers.py  grid_search.sh  group_beam_searcher.hpp  llm.cpp  set_up_and_run.sh
llm/llama_cpp/: CMakeLists.txt  llama.cpp  sampling.hpp
llm/mincpmv2_cpp/: CMakeLists.txt  README.md  clip.cpp  clip.h  export_MiniCPM-V-2.py  log.h  minicpmv.cpp  minicpmv.h  minicpmv_ov.cpp  ov_minicpm-v2-test.py  sampling.hpp  stb_image.h
llm/minicpm_cpp/: CMakeLists.txt  minicpm.cpp
llm/python/: CODEOWNERS  LICENSE  README.md  benchmark.py  convert.py  requirements.txt  setup.cfg
llm/python/utils/: config_class.py  model_utils.py  output_csv.py  ov_model_classes.py  ov_utils.py  pt_utils.py
llm/qwen_cpp/: .gitmodules  CMakeLists.txt  README.md  main.cpp  qwen.cpp  qwen.h  tiktoken.h
samples/: CMakeLists.txt  deployment-requirements.txt  export-requirements.txt  requirements.txt
samples/c/: CMakeLists.txt
samples/c/common/: json_utils.c  json_utils.h
samples/c/rag/: CMakeLists.txt  README.md  text_embeddings_c.c  text_rerank_c.c
samples/c/speech_generation/: CMakeLists.txt  text2speech_sample_c.c  text2speech_sample_utils.c  text2speech_sample_utils.h
samples/c/text_generation/: README.md  (+4 more)
samples/cpp/: README.md  fetch_opencv.cmake  requirements.txt
samples/js/: app.js  ffmpeg_utils.js  image_utils.js  interactive.js  package-lock.json  package.json
samples/python/: video_processing_example.py
src/: BUILD_FROM_SOURCE.md  CMakeLists.txt  INSTALL_ARCHIVE.md  INSTALL_PYPI.md  README.md  SUPPORTED_MODELS.md  bindings_utils.hpp  utf8_validate.cpp.patch  utf8_validate.hpp.patch
src/c/: CMakeLists.txt
src/cpp/: CMakeLists.txt  OpenVINOGenAIConfig.cmake.in  openvino_genaiConfig.cmake.in
src/docs/: BUILD.md  DEBUG_LOG.md  DOCKER.md  HOW_IT_WORKS.md  INSTALL_ARCHIVE.md  INSTALL_PYPI.md  KOKORO_SPEECH_GENERATION_PLAN.md  SUPPORTED_MODELS.md  USAGE.md  VIDEO_PROCESSING.md
src/js/: .gitignore  .npmignore  BUILD.md  CMakeLists.txt  README.md  TEXT2VIDEO_JS_BINDINGS_PLAN.md  eslint.config.cjs  eslint.config.js  eslint.config.ts  package-lock.json  package.json  tsconfig.json
src/python/: CMakeLists.txt  clean_version.cmake  compare_pyi.cmake  py_asr_pipeline.cpp  py_chat_history.cpp  py_continuous_batching_pipeline.cpp  py_generate_pipeline.cpp  py_generation_config.cpp  py_image_generation_models.cpp  py_image_generation_pipelines.cpp  py_llm_pipeline.cpp  py_lora_adapter.cpp  py_module_pipeline.cpp  py_omni_pipeline.cpp  py_openvino_genai.cpp  py_parsers.cpp  py_perf_metrics.cpp  py_rag.cpp  py_seq2seq_pipeline.cpp  py_speech_generation.cpp  py_streamers.cpp  py_text2image_models.cpp  py_text2image_pipeline.cpp  py_tokenizer.cpp  py_utils.cpp  py_utils.hpp  py_video_generation_models.cpp  py_video_generation_pipelines.cpp  py_vlm_pipeline.cpp  py_whisper_pipeline.cpp  python.cpp  remove_abi_specific_info.cmake  utils.cpp  utils.hpp
src/python-bindings/: CMakeLists.txt  py_generate_pipeline.cpp
src/script/: get_statistic_updated.py
tests/cpp/: CMakeLists.txt  asr_pipeline.cpp  block_allocator.cpp  block_hash_store.cpp  block_manager.cpp  cache_eviction.cpp  cache_manager.cpp  cache_orchestrator_hybrid.cpp  device_config.cpp  diffusion_caching.cpp  discrete_distribution.cpp  eagle_tree_search.cpp  evictor.cpp  generate_config.cpp  gguf_reader_v2_test.cpp  helper.cpp  helper.hpp  jump_forward_validation.cpp  kv_cache_persistence.cpp  kvcrush.cpp  logger.cpp  logit_filtering.cpp  model_runner.cpp  mtp_model_transforms.cpp  parser.cpp  run_cache_types_tests.sh  sampler.cpp  sampler_eagle_validate.cpp  scheduler.cpp  sparse_attention.cpp  sparse_prefill.cpp  speculative_decoding.cpp  structured_output_config.cpp  supports_paged_attention.cpp  test_add_extensions.cpp  test_add_extenstions.cpp  test_add_second_input_pass.cpp  test_audio_chunk_frames_validation.cpp  test_audio_encoder_validation.cpp  test_cache_types.cpp  (+22 more)
tests/genai_test_utils/: CMakeLists.txt  py_genai_test_utils.cpp  pyproject.toml
tests/ov_genai_test_utils/: CMakeLists.txt  py_ov_genai_test_utils.cpp  pyproject.toml
text_generation/cpp/: CMakeLists.txt  README.md  decoder_beam.cpp  decoder_greedy.cpp  set_up_and_run.sh
tools/cacheviz/: __init__.py  cacheviz.py  pyproject.toml  requirements.txt
tools/llm_bench/: README.md  README_EAGLE3.md  benchmark.py  config.json  convert.py  pyproject.toml  requirements.txt  requirements_2024.5.txt
tools/who_what_benchmark/: README.md  pyproject.toml  requirements-speech-generation.txt  requirements.txt  setup.cfg  setup.py
(+2989 files in other folders)
