[project]
name = "openvino-genai"
version = "2026.0.0.0"
description = "Library of the most popular Generative AI model pipelines, optimized execution methods, and samples"
requires-python = ">=3.10"
readme = { file = "src/README.md", content-type="text/markdown" }
license = { "file" = "LICENSE" }
authors = [
    { name = "OpenVINO Developers", email = "openvino@intel.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: C++",
    "Programming Language :: C",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = [
    "openvino_tokenizers~=2026.0.0.0.dev"
]
[project.optional-dependencies]
testing = ["pytest>=6.0"]

[tool.py-build-cmake.module]
directory = "src/python"

[tool.py-build-cmake.sdist]
include = ["CMakeLists.txt", "LICENSE", "third-party-programs.txt", "SECURITY.md", "cmake", "src", "thirdparty"]

[tool.py-build-cmake.cmake]
minimum_version = "3.23"
build_type = "Release"
config = ["Release"]
find_python3 = true
build_args = ["--parallel", "--target", "py_openvino_genai_stub"]
install_args = ["--strip"]
install_components = ["wheel_genai"]
options = {"ENABLE_PYTHON" = "ON", "BUILD_TOKENIZERS" = "OFF", "ENABLE_SAMPLES" = "OFF", "ENABLE_TESTS" = "OFF", "ENABLE_TOOLS" = "OFF", "CMAKE_SKIP_INSTALL_RPATH" = "OFF"}

[build-system]
requires = [
    "py-build-cmake==0.5.0",
    "openvino~=2026.0.0.0.dev",
    "pybind11-stubgen==2.5.5",
    "cmake~=3.23.0; platform_system != 'Darwin' or platform_machine == 'x86_64'",
    "cmake~=3.24.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
]
build-backend = "py_build_cmake.build"

[tool.pytest.ini_options]
markers = [
    "precommit: (deselect with '-m \"precommit\"')",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",  # pydocstyle
    "S311",  # suspicious-non-cryptographic-random-usage
    "PGH003",  # blanket-type-ignore
    "PTH123",  # builtin-open
    "PTH118",  # os-path-join
    "TRY003",  # raise-vanilla-args
    "EM101",  # raw-string-in-exception
    "EM102",  # f-string-in-exception
    "FBT003",  # boolean-positional-value-in-call
    "FBT002",  # boolean-default-positional-value-in-call
    "FBT001",  # boolean-type-hint-positional-argument
    "TC001",  # typing-only-first-party-import,
    "TD002",  # todo-missing-author,
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = [
    "S101",  # assert
    "ANN",  # flake8-annotations
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "PERF",  # perflint
    "PLR2004",  # magic-value-comparison
    "SLF001",  # private-member-access
    "S110",  # try-except-pass
    "BLE001",  # blind-except
    "B904",  # raise-without-from-inside-except
]
